--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-tailwindcss": "^3.11.0",
     "happy-dom": "^9.6.1",
+    "husky": "^8.0.3",
     "postcss": "^8.4.21",
     "prettier": "2.8.7",
     "tailwindcss": "^3.3.1",
